yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickandmorty-service
spec:
  selector:
    app: rickandmorty-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
