yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rickandmorty-ingress
spec:
  rules:
    - host: rickandmorty.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rickandmorty-service
                port:
                  number: 80
